# pybliometrics

./: .gitignore  .readthedocs.yaml  AUTHORS  AUTHORS.rst  CHANGES.rst  CITATION.cff  CONTRIBUTING.rst  ChangeLog  LICENSE  README.ipynb  README.org  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  default.md  feature.md  question.md
docs/: Makefile  access.rst  authors.rst  changelog.rst  classes.rst  conf.py  configuration.rst  examples.rst  index.rst  installation.rst  make.bat  reference.rst  requirements.txt  tips.rst
docs/_static/: custom.css
docs/access/: errors.rst  general.rst  quotas.rst
docs/classes/: AbstractRetrieval.rst  AffiliationRetrieval.rst  AffiliationSearch.rst  AuthorRetrieval.rst  AuthorSearch.rst  CitationOverview.rst  PlumXMetrics.rst  ScopusSearch.rst  SerialSearch.rst  SerialTitle.rst  SubjectClassifications.rst
docs/examples/: AbstractRetrieval.rst  AffiliationRetrieval.rst  AffiliationSearch.rst  AuthorRetrieval.rst  AuthorSearch.rst  CitationOverview.rst  ContentAffiliationRetrieval.rst  PlumXMetrics.rst  ScopusAbstract.rst  ScopusAffiliation.rst  ScopusAuthor.rst  ScopusSearch.rst  SerialSearch.rst  SerialTitle.rst  SubjectClassifications.rst  report.rst  report_example.rst
docs/reference/: AbstractRetrieval.rst  AffiliationSearch.rst  AuthorRetrieval.rst  AuthorSearch.rst  CitationOverview.rst  PlumXMetrics.rst  PublicationLookup.rst  ScopusSearch.rst  SerialTitle.rst  pybliometrics.AbstractRetrieval.rst  pybliometrics.AffiliationRetrieval.rst  pybliometrics.AffiliationSearch.rst  pybliometrics.AuthorRetrieval.rst  pybliometrics.AuthorSearch.rst  pybliometrics.CitationOverview.rst  pybliometrics.ContentAffiliationRetrieval.rst  pybliometrics.PlumXMetrics.rst  pybliometrics.ScopusSearch.rst  pybliometrics.SerialSearch.rst  pybliometrics.SerialTitle.rst  pybliometrics.SubjectClassifications.rst  scopus.AbstractRetrieval.rst  scopus.AffiliationSearch.rst  scopus.AuthorRetrieval.rst  scopus.AuthorSearch.rst  scopus.CitationOverview.rst  scopus.ContentAffiliationRetrieval.rst  scopus.ScopusAbstract.rst  scopus.ScopusAffiliation.rst  scopus.ScopusAuthor.rst  scopus.ScopusSearch.rst  scopus.SerialTitle.rst  scopus.report.rst  scopus_affiliation.rst  scopus_api.rst  scopus_author.rst  scopus_reports.rst  scopus_search.rst
docs/reference/sciencedirect/: ArticleEntitlement.rst  ArticleMetadata.rst  ArticleRetrieval.rst  NonserialTitle.rst  ObjectMetadata.rst  ObjectRetrieval.rst  ScDirSubjectClassifications.rst  ScienceDirectSearch.rst  SerialTitle.rst  SerialTitleISSN.rst  SubjectClassifications.rst
docs/reference/scival/: AuthorMetrics.rst  InstitutionLookupMetrics.rst  InstitutionMetrics.rst  PublicationLookup.rst  TopicLookupMetrics.rst
docs/reference/scopus/: AbstractRetrieval.rst  AffiliationRetrieval.rst  AffiliationSearch.rst  AuthorRetrieval.rst  AuthorSearch.rst  CitationOverview.rst  ScopusSearch.rst  SerialSearch.rst  SerialTitle.rst  SerialTitleISSN.rst  SerialTitleSearch.rst  SubjectClassifications.rst
docs/tips/: KeyError.rst  affiliations.rst  configuration.rst  database.rst  download_machine.rst  errors.rst  migration1.rst  migration3.rst  quotas.rst  rename.rst  support.rst  updates.rst
meta/: AUTHORS.rst  CHANGES.rst
pybliometrics/: __init__.py  exception.py
pybliometrics/sciencedirect/: __init__.py  article_entitlement.py  article_metadata.py  article_retrieval.py  entitlement_retrieval.py  nonserial_title.py  object_metadata.py  object_retrieval.py  sciencedirect_search.py  serial_title.py  subject_classifications.py
pybliometrics/sciencedirect/tests/: README.md  test_ArticleEntitlement.py  test_ArticleMetadata.py  test_ArticleRetrieval.py  test_NonserialTitle.py  test_ObjectMetadata.py  test_ObjectRetrieval.py  test_ScienceDirectSearch.py  test_ScienceDirectSerialTitle.py  test_ScienceDirectSubjectClassifications.py  test_SerialTitle.py  test_SerialTitleISSN.py  test_SubjectClassifications.py
pybliometrics/scival/: __init__.py  author_metrics.py  institution_lookup_metrics.py  institution_metrics.py  publication_lookup.py  topic_lookup_metrics.py  topic_metrics.py
pybliometrics/scival/tests/: test_AuthorMetrics.py  test_InstitutionLookupMetrics.py  test_InstitutionMetrics.py  test_PublicationLookup.py  test_TopicLookupMetrics.py  test_topic_metrics.py
pybliometrics/scopus/: __init__.py  abstract_citation.py  abstract_citations.py  abstract_retrieval.py  affiliation_retrieval.py  affiliation_search.py  author_retrieval.py  author_search.py  exception.py  plumx_metrics.py  scopus_search.py  serial_search.py  serial_title.py  serial_title_issn.py  serial_title_search.py  subj_class.py  subject_classifications.py
pybliometrics/superclasses/: __init__.py  base.py  retrieval.py  search.py
pybliometrics/utils/: __init__.py  checks.py  constants.py  create_config.py  get_content.py  parse_content.py  parse_metrics.py  startup.py
scopus/: __init__.py  abstract_citations.py  abstract_retrieval.py  affiliation_retrieval.py  affiliation_search.py  author_retrieval.py  author_search.py  exception.py  scopus_affiliation.py  scopus_api.py  scopus_author.py  scopus_author_search.py  scopus_reports.py  scopus_search.py  search_affiliation.py  search_author.py  serial_title.py
scopus/classes/: __init__.py  retrieval.py  search.py
scopus/deprecated_/: __init__.py  scopus_affiliation.py  scopus_api.py  scopus_author.py  scopus_reports.py
scopus/docs/: conf.py  index.rst
scopus/tests/: README.md  __init__.py  test_AbstractRetrieval.py  test_AffiliationSearch.py  test_AuthorRetrieval.py  test_AuthorSearch.py  test_CitationOverview.py  test_ContentAffiliationRetrieval.py  test_ScopusAbstract.py  test_ScopusAffiliation.py  test_ScopusAuthor.py  test_ScopusSearch.py  test_SerialTitle.py
scopus/utils/: __init__.py  constants.py  create_config.py  detect_id_type.py  discover_id_type.py  get_content.py  get_encoded_text.py  parse_content.py  setup.py  startup.py
widgets/: documentSearch.html
(+33 files in other folders)
