[metadata]
name = pybliometrics
author = 'John Kitchin and Michael E. Rose
author-email = Michael.Ernst.Rose@gmail.com
maintainer = Michael E. Rose
maintainer-email = Michael.Ernst.Rose@gmail.com
summary = Python-based API-Wrapper to access Scopus
description-file = README.rst
home-page = https://pybliometrics.readthedocs.io/en/stable/
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis
keywords =
    scopus

[files]
packages =
    pybliometrics
    pybliometrics.util

[bdist_wheel]
universal=1
