[metadata]
name = pybliometrics
author = 'John Kitchin and Michael E. Rose
author_email = Michael.Ernst.Rose@gmail.com
maintainer = Michael E. Rose
maintainer_email = Michael.Ernst.Rose@gmail.com
summary = Python-based API-Wrapper to access Scopus
description_file = README.rst
home_page = https://pybliometrics.readthedocs.io/en/stable/
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Information Analysis
keywords =
    scopus

[files]
packages =
    pybliometrics
    pybliometrics.util

[bdist_wheel]
universal=1
